# PINN-LSM-fire

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: EXAMPLES.md  config.ini  main.py
src/plfire/: __init__.py  pinn.py  utils.py
src/wildfire/: __init__.py  asensio.py  logging_utils.py  lsm.py  pde.py  plot.py  train.py  utils.py
