[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plfire"
version = "0.1.0"
description = "Physics-Informed Neural Networks for Level Set Method applied to fires"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "dsanmartin" }]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
train = ["tqdm>=4.66"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
